# jules_test_01

./: README.md  pyproject.toml
assets/: enemies.json  items.json
doc/requirements_definition/: 01_player_movement.md  02_combat_system.md  03_item_system.md  04_floor_transition.md  05_content_and_completion.md
roguelike_rpg/: __init__.py  main.py
roguelike_rpg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
roguelike_rpg/application/: __init__.py  enemy_ai_service.py  game_loop.py  game_state.py  services.py
roguelike_rpg/domain/: __init__.py  factories.py  game_map.py  mapgen.py  message_log.py  pathfinding.py  tile.py
roguelike_rpg/domain/ecs/: __init__.py  component.py  components.py  entity.py  world.py
roguelike_rpg/infrastructure/: __init__.py  data_loader.py
roguelike_rpg/presentation/: __init__.py  dungeon_renderer.py  end_screen.py  inventory_screen.py
tests/: __init__.py
tests/test_application/: __init__.py  test_enemy_ai_service.py  test_game_loop.py  test_services.py
tests/test_domain/: __init__.py  test_mapgen.py
